--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,10 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
     "nuxt": "^3.6.2"
+  },
+  "dependencies": {
+    "@vicons/fluent": "^0.12.0",
+    "naive-ui": "^2.34.4",
+    "vfonts": "^0.0.3"
   }
 }
